add modified files

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
     width: 500px;
 }
 .container-fluid{
+    text-align: center;
     display: flex;
     justify-content: space-between;
     border: 10px;
