--- a/style.css
+++ b/style.css
@@ -39,3 +39,23 @@
     border: 10px;
     margin: 10px;
 }
+.container1{
+    background-color: grey;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    border-radius: 2px;
+    margin-top: 60px;
+    margin-left: 50px;
+    box-shadow: -10px 20px 50px red;
+
+
+}
+.contact-info{
+    height: 350px;
+    width: 230px;
+    padding: 20px;
+    background: black;
+    color: white;
+    margin-top: 50px;
+}
