--- a/style.css
+++ b/style.css
@@ -49,7 +49,10 @@ span{
     margin-left: 0%;
 }
 .container-fluid1{
-    background-color: grey;
+    background-image: url('images/alexandru-acea--WBYxmW4yuw-unsplash.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .container-fluid1 .box img{
     height: 300px;
@@ -59,12 +62,18 @@ span{
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
-    background-color: blue;
+    
     
 }
 .mycontainer .box{
     border: 2px solid yellow;
     background-color: white;
+}
+.mycontainer .box p{
+    text-align: center;
+    font-size: large;
+    margin: 5px;
+    
 }
 .container .box img{
     margin-left: 5px;
@@ -98,15 +107,30 @@ span{
     background-size: cover;
 }
 .portlist{
-    display: inline-block;
+    text-align: center;
+    justify-items: flex-start;
     color: white;
+}
+.portlist ul{
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
 }
 .port .card{
     float: inline-block;
    margin-bottom: 2%;
-   color:black;
+   color: white;
    text-align: center;
-   margin: 5%;
+   font-size: large;
+   margin: 2%;
+   padding-bottom: 5%;
+}
+.port .card h4{
+    color: yellow;
+}
+.port h6{
+    color: yellow;
+    font-size: 20px;
 }
 .boxx{
     display: flex;
@@ -125,7 +149,11 @@ span{
     color: yellow;
 }
 .contact{
+    color: white;
     margin-top: 7%;
+}
+.contact .email{
+    color: white;
 }
 .contact h6{
     font-size: large;
