--- a/style.css
+++ b/style.css
@@ -10,8 +10,59 @@
     background-repeat: no-repeat;
     
 }
+.lines{
+    width: 100%;
+    height: 45px;
+    position: relative;
+}
+.lines::after, .lines::before{
+    content: '';
+    position: absolute;
+    margin: auto;
+    background-color: white;
+    height: 2px;
+    width: 45%;
+    top: 45%;
 
-
+}
+.lines::after{
+    left: 0;
+}
+.lines::before{
+    right: 0;
+}
+.circle{
+    height: 40px;
+    width: 40px;
+    border: 2px solid white;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 50%;
+}
+.lines::after, .lines::before{
+    content: '';
+    position: absolute;
+    margin: auto;
+    background-color:black;
+    height: 2px;
+    width: 45%;
+    top: 45%;
+}
+    
+.diamond{
+    height: 40px;
+    width: 40px;
+    border: 4px solid black;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    transform: rotate(45deg);
+}
 .navlist{
     color: white;
     font-size: 25px;
@@ -34,7 +85,7 @@ span{
     color: yellow;
 }
 .boxe{
-    
+    background-color: grey;
     margin-top: 5px;
     justify-content: space-between;
     box-sizing: border-box;
@@ -166,7 +217,7 @@ span{
     
 }
 #Name, #Email{
-    border-radius: 11px;
+    border-radius: 18px;
     border: none;
     font-size: large;
     padding: 2%;
