--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
     justify-content: space-between;
     text-decoration: none;
 }
-.navlist ul li{
+.navlist ul ol{
     text-decoration: none;
 }
 .header h1{
